Add scroll arrows navigation with ScrollBooster library integration

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/png" href="/vite.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Alma Pixel - Indie Game Studio</title>
+    <script src="https://unpkg.com/scrollbooster@3/dist/scrollbooster.min.js" defer></script>
   </head>
   <body>
     <div id="root"></div>
